# guardgraph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  action.yml  guardgraph.yml  pyproject.toml
.github/workflows/: real-fastapi-template-scan.yml  test.yml
benchmarks/: README.md  cases.yml  run_benchmark.py
benchmarks/fastapi_di_app/: auth.py  main.py
benchmarks/fastapi_di_app/routes/: annotated.py  direct.py  nested.py  public.py  route_level.py  router_level.py
benchmarks/fixtures/: unsafe_upload_fixture.py
guardgraph/: __init__.py  analyzer.py  cli.py  config.py  graphs.py  markdown_report.py  models.py  parser.py  sarif.py  utils.py
tests/: test_guardgraph.py
tests/test_app/: main.py
tests/test_app/routes/: admin.py  auth.py  contact.py  orders.py  payments.py  search.py  users.py
tests/test_app/services/: auth.py
